syntax = "proto3";

package response;

import "struct.proto";

message Response {
  WsResponse ws_response = 1;
  WsUpdate ws_update = 2;
}

message WsResponse {
  bytes error = 1;
  bytes response = 2;
  int64 index = 3;
}

message WsUpdate {
  Update update = 1;
}

message Update {
  ComposedUpdate composed_update = 1;
}

message ComposedUpdate {
  bytes message_sent = 4;
  UpdateMessage message = 55;
}


message UpdateMessage {
  struct.Peer peer = 1;
  int32 sender_uid = 2;
  int64 date = 3;
  int64 rid = 4;
  struct.Message message = 5;
  struct.QuotedMessage quoted_message = 7;
  struct.MessageId previous_message_id = 9;
}

// ----------------------------------------------------------
// Get Message Views

message GetMessageViews {
  repeated struct.MessagesViews containers = 1;
}

// ----------------------------------------------------------
// Load History

message LoadHistory {
  repeated struct.MessageContainer history = 1;
}

// ----------------------------------------------------------
// Join Group

message JoinGroup {
  struct.Group group = 1;
  int32 seq = 2;
}

// ----------------------------------------------------------
// Join Public Group

message JoinPublicGroup {
  struct.Group group = 1;
  int32 seq = 2;
}

// ----------------------------------------------------------
// Get Full Group

message GetFullGroup {
  struct.FullGroup full_group = 1;
}

// ----------------------------------------------------------
// Search Contacts

message SearchContacts {
  repeated int32 users = 1;
  repeated int32 user_peers = 2;
  repeated int32 groups = 4;
  repeated struct.GroupOutPeer group_peers = 5;
}

// ----------------------------------------------------------
// Edit Group Avatar

message EditGroupAvatar {
  struct.Avatar avatar = 1;
  int32 seq = 2;
  bytes state = 3;
  int64 date = 4;
}

// ----------------------------------------------------------
// Get Group Invite Url

message GetGroupInviteUrl {
  string url = 1;
}

// ----------------------------------------------------------
// Revoke Invite Url

message RevokeInviteUrl {
  string url = 1;
}

// ----------------------------------------------------------
// Invite Users

message InviteUsers {
  repeated struct.UserOutPeer not_added_user_peers = 1;
}

// ----------------------------------------------------------
// Load Members

message LoadMembers {
  repeated struct.Member members = 1;
  bytes next = 2;
}

// ----------------------------------------------------------
// Get Chat Members Count

message GetGroupMembersCount {
    int32 members_count = 1;
}